[gd_scene load_steps=3 format=3 uid="uid://b7ubmp8sthntc"]

[ext_resource type="Script" path="res://Game/Interface/hack_shop.gd" id="1_wmrks"]
[ext_resource type="PackedScene" uid="uid://d0altvtk67lo8" path="res://Game/Clickers/Hacking/hack_item_button.tscn" id="2_djb87"]

[node name="HackShop" type="Control" groups=["g_hack_shop_item"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmrks")
metadata/_tab_index = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HackingItems" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
metadata/_edit_use_anchors_ = true

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HackingItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="X1Button" type="Button" parent="MarginContainer/VBoxContainer2/HackingItems/ButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "x 1"

[node name="X10Button" type="Button" parent="MarginContainer/VBoxContainer2/HackingItems/ButtonsContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "x 10"

[node name="X100Button" type="Button" parent="MarginContainer/VBoxContainer2/HackingItems/ButtonsContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "x 100"

[node name="XMaxButton" type="Button" parent="MarginContainer/VBoxContainer2/HackingItems/ButtonsContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
text = "Max"

[node name="HackGrid" type="GridContainer" parent="MarginContainer/VBoxContainer2/HackingItems"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/v_separation = 15
metadata/_edit_use_anchors_ = true

[node name="HackItemButton" parent="MarginContainer/VBoxContainer2/HackingItems/HackGrid" instance=ExtResource("2_djb87")]
layout_mode = 2

[node name="HackItemButton2" parent="MarginContainer/VBoxContainer2/HackingItems/HackGrid" instance=ExtResource("2_djb87")]
layout_mode = 2

[node name="Sources" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
